update khoi tao ansible